@@ -59,7 +59,7 @@ public class SaveNewNameCommand extends AbstractCommand<SaveNewNameCommand.Param
             final Node node = goal.node().parent();
             final List<String> matches =
                 node.getNameRecorder().getProposals().stream().map(Name::toString)
-                        .filter(str -> str.matches(stringToMatch)).collect(Collectors.toList());
+                        .filter(str -> str.matches(stringToMatch)).toList();
 
             if (matches.size() != 1) {
                 throw new ScriptException(
