@@ -94,7 +94,7 @@ public final class ProofIndependentSMTSettings
         // Z3_CE solver should not be a usable solver union or part of any as it is
         // treated separately.
         for (SolverType type : nonLegacyTypes.stream().filter(t -> t != SolverTypes.Z3_CE_SOLVER)
-                .collect(Collectors.toList())) {
+                .toList()) {
             solverUnions.add(new SolverTypeCollection(type.getName(), 1, type));
         }
 
