@@ -31,7 +31,7 @@ public class KeyboardTacletTest {
         assertEquals(3, KeyboardTacletModel.getClashFreePrefix("impLeft", keywords));
 
         Map<String, String> table = KeyboardTacletModel.buildPrefixTable(keywords);
-        List<String> prefixes = table.keySet().stream().sorted().collect(Collectors.toList());
+        List<String> prefixes = table.keySet().stream().sorted().toList();
         assertEquals("[andL, andR, cut, cut_, i]", prefixes.toString());
     }
 }
